# blog

./: .gitignore  db.sqlite3  pyproject.toml
django_blog/: settings.py  urls.py  views.py
django_blog/article/: admin.py  forms.py  urls.py  views.py
django_blog/article/migrations/: 0001_initial.py
django_blog/article/templates/article/: index.html
django_blog/templates/: about.html  article.html  base.html  index.html
django_blog/templates/article/: article.html  create.html  index.html  show.html  update.html
