[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Denis <makrotheeast@gmail.com>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
